--- a/docker/Dockerfile_centos
+++ b/docker/Dockerfile_centos
@@ -39,9 +39,9 @@ RUN cmake -DCMAKE_BUILD_TYPE=Release \
       -DALICEVISION_USE_POPSIFT=ON -DALICEVISION_USE_CUDA=ON -DALICEVISION_USE_ONNX_GPU=OFF -DALICEVISION_BUILD_DOC=OFF \
       -DSWIG_DIR="${AV_INSTALL}/share/swig/4.3.0" -DSWIG_EXECUTABLE="${AV_INSTALL}/bin-deps/swig" \
       "${AV_DEV}" || (cat "${AV_BUILD}/CMakeFiles/CMakeOutput.log" "${AV_BUILD}/CMakeFiles/CMakeError.log" && false)
-
-ENV CPU_CORES=`${AV_DEV}/docker/check-cpu.sh`      
-RUN make -j"${CPU_CORES}" && \
+      
+RUN export CPU_CORES=`${AV_DEV}/docker/check-cpu.sh`; \
+    make -j"${CPU_CORES}" && \
     make install && \
     make bundle && \
     rm -rf "${AV_DEV}" "${AV_BUILD}"
